fix(stack): fix height clipping on mobile

--- a/src/components/common/stack/stack.module.scss
+++ b/src/components/common/stack/stack.module.scss
@@ -15,7 +15,7 @@
   position: relative;
   z-index: 5;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background: #2a2b30;
   box-shadow: 0 -1px 10px rgb(0 0 0 / 10%);
   transform: translate3d(0, 40%, 0);
